# rust_iron_practice

./: .gitignore  Cargo.toml  README.md
scripts/: release_armv6.sh  release_armv7.sh
src/: main.rs
src/models/: user.rs
templates/: hello_again.hbs  index.hbs
templates/layouts/: default.hbs
templates/users/: index.hbs  show.hbs
