[package]
name = "rust_iron_practice"
version = "0.1.0"
authors = ["Asuk Kono <asukiaaa@gmail.com>"]
edition = "2018"

[dependencies]
handlebars-iron = "0.27"
handlebars = "1.1"
iron = "0.6"
mount = "0.4"
params = "0.8"
router = "0.6"
rusqlite = { version = "0.16", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
staticfile = "0.5"
time = "0.1"
